[workspace]
resolver = "2"
members = [
    "lockmap-core",
    "lockmap",
    "lockmap-lru",
]

[workspace.package]
version = "0.1.16"
edition = "2021"
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
homepage = "https://github.com/SF-Zhou/lockmap"
repository = "https://github.com/SF-Zhou/lockmap"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
lockmap-core = { version = "0.1.16", path = "lockmap-core" }
aliasable = "0.1.3"
atomic-wait = "1"
foldhash = "0.1.5"
