[package]
name = "lockmap"
version = "0.2.2"
edition = "2021"

authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
homepage = "https://github.com/SF-Zhou/lockmap"
repository = "https://github.com/SF-Zhou/lockmap"
description = "A high-performance, thread-safe HashMap and LRU cache with fine-grained per-key locking."
license = "MIT OR Apache-2.0"

[dependencies]
aliasable = "0.1"
foldhash = "0.2"
hashbrown = "0.15"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0"
rand = "0"

[[bench]]
name = "bench_lockmap"
harness = false
