[package]
name = "lockmap"
version = "0.2.3"
edition = "2021"
rust-version = "1.75"

authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
homepage = "https://github.com/SF-Zhou/lockmap"
repository = "https://github.com/SF-Zhou/lockmap"
description = "A high-performance, thread-safe HashMap and LRU cache with fine-grained per-key locking."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hashmap", "concurrent", "lru", "cache", "lock"]
categories = ["concurrency", "data-structures", "caching"]

[dependencies]
aliasable = "0.1"
foldhash = "0.2"
hashbrown = "0.15"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.8"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
rand = "0.10"

[[bench]]
name = "bench_lockmap"
harness = false

[[bench]]
name = "bench_compare"
harness = false
