[package]
name = "lockmap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Core components for lockmap: futex-based locking and sharded map structures"

[dependencies]
atomic-wait.workspace = true
foldhash.workspace = true
