[package]
name = "lockmap-lru"
version = "0.1.1"
edition = "2021"

authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
homepage = "https://github.com/SF-Zhou/lockmap"
repository = "https://github.com/SF-Zhou/lockmap"
description = "A high-performance, thread-safe LRU cache built on lockmap's per-key locking architecture."
license = "MIT OR Apache-2.0"

[dependencies]
aliasable.workspace = true
foldhash.workspace = true
hashbrown.workspace = true
lockmap-core = { version = "0.1.0", path = "../lockmap-core" }

[dev-dependencies]
rand = "0"
